--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     </head>
     <body>
         <div id="main"></div>
-        <script src="./dist/bundle.js"></script>      
+        <script src="/AboutMe/dist/bundle.js"></script>      
     </body>
 </html>
